services/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: MYSERVICE-deployment
  namespace: MYNAMESPACE
  labels:
    app: MYSERVICE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: MYSERVICE
  template:
    metadata:
      # Labels are used for service identification and billing.
      labels:
        app: MYSERVICE
        contact: mst3k@virginia.edu
        owner: MST3K
        department: MYDEPARTMENT
    spec:
      # Storage volumes in K8S depend upon two elements: 
      #    1. A PV (persistent volume) defined before consumption, which is defined for you by the DevOps team.
      #    2. A PVC (persistent volume claim) that consumes the PV, and which maps it to a path within your container.
      volumes:
      - name: SOME-nfs-volume
        persistentVolumeClaim:
          claimName: SOME-nfs-pvc
      containers:
      - name: SOME-container
        image: ghcr.io/org/container:tag
        imagePullPolicy: [IfNotPresent | Always ]
        ports:
        - containerPort: 80
        volumeMounts:
        - name: SOME-nfs-volume
          mountPath: /path/inside/container
        resources:
            memory: "524Mi"
            cpu: "50m"               # Fractional CPUs - this represents 50/1000 of a CPU
          limits:
            memory: "1024Mi"
            cpu: "100m"

#
# Deployment file is the basic definition of the pod. It defines the container to run,
# the number of replicas, any ENV variables, VOLS to be mounted, SECRETS, etc.
#
